src/objects/Case_Item__c.object
<CustomObject>
    <description>Used to track tasks to be performed on single topic.</description>
    <fields>
        <fullName>Advocate_Comments__c</fullName>
        <description>Comments that are created by the person working the case item/claim</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This information is viewed by providers, avoid acronyms &amp; internal jargon</inlineHelpText>
        <label>Advocate Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Benefit_Level__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Level</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Work_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Claim_Outcome_Status__c</fullName>
        <description>The final status of the claim in the case item as determined by Advocate working the case item</description>
        <label>Claim Outcome Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Claim Adjusted</fullName>
                </value>
                <value>
                    <fullName>Claim Adjusted - No Additional Payment</fullName>
                </value>
                <value>
                    <fullName>Claim Partially Adjusted</fullName>
                </value>
                <value>
                    <fullName>Claim Upheld</fullName>
                </value>
                <value>
                    <fullName>Claim Upheld Adtl Information Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Type__c</fullName>
        <label>Claim Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HCFA</fullName>
                </value>
                <value>
                    <fullName>NDC</fullName>
                </value>
                <value>
                    <fullName>UB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClosedReason__c</fullName>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Closed_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box when work item is complete</inlineHelpText>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <description>UHC Subscriber Date of Birth</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Service_End__c</fullName>
        <description>The last date that a UHC member received services from a provider on a single claim</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Service End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Service_Start__c</fullName>
        <description>The first date that a UHC member received services from a provider on a single claim</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Service Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_from_Original_Issue__c</fullName>
        <formula>If(
(ISBLANK(Case__r.ParentId)),
0, Case__r.CreatedDate  - Case__r.Parent.CreatedDate
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Tracy Testing</inlineHelpText>
        <label>Days from Original Issue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrichment_Status__c</fullName>
        <description>This is a A.O.L. only field tracked by A.O.L and users will not be able to update this field</description>
        <label>Enrichment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Enriched</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ext_Record_Close_DateTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ext Record Close DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ext_Record_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Ext Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_Record_Status__c</fullName>
        <label>Ext Record Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLN__c</fullName>
        <description>Internal filmed reference number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FLN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>Area with in UHC that the claim originates from</description>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Community and State</fullName>
                </value>
                <value>
                    <fullName>Employer and Individual</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Medicare and Retirement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_First_Name__c</fullName>
        <description>UHC Subscriber First Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Member First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Last_Name__c</fullName>
        <description>UHC Subscriber Last Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Number__c</fullName>
        <description>Internal UHC Member Identification number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitor_Only_Date__c</fullName>
        <description>A date that advises when we are waiting for information from an area of UHC that ISG does not have access to</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date the resolution work for this claim completed</inlineHelpText>
        <label>Monitor Only Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PIR_Markets__c</fullName>
        <description>Local areas UHC Networks has broken the country into</description>
        <label>PIR Markets</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_Account_Number__c</fullName>
        <description>A member ID number that is assigned by the rendering provider</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Patient Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_ID__c</fullName>
        <description>Internal ID number that advises where claim payments are coming from.</description>
        <label>Payer ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <description>The system that the claim in housed in</description>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cirrus</fullName>
                </value>
                <value>
                    <fullName>COSMOS</fullName>
                </value>
                <value>
                    <fullName>CSP Facets</fullName>
                </value>
                <value>
                    <fullName>NICE</fullName>
                </value>
                <value>
                    <fullName>Pulse</fullName>
                </value>
                <value>
                    <fullName>RV Facets</fullName>
                </value>
                <value>
                    <fullName>TRICARE</fullName>
                </value>
                <value>
                    <fullName>UMR/Golden Rule/Third Party</fullName>
                </value>
                <value>
                    <fullName>UNET</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proactive_Initiative__c</fullName>
        <description>Proactive Initiative</description>
        <inlineHelpText>Proactive Initiative Claim Project</inlineHelpText>
        <label>Proactive Initiative</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Resolved_Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Information Needed</fullName>
                </value>
                <value>
                    <fullName>Expectation Met</fullName>
                </value>
                <value>
                    <fullName>Expectation Not Met</fullName>
                </value>
                <value>
                    <fullName>No Action Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <description>The type of coverage that UHC member hold and what provider are contracted under</description>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AARP Supplement</fullName>
                </value>
                <value>
                    <fullName>Charter</fullName>
                </value>
                <value>
                    <fullName>CHIP</fullName>
                </value>
                <value>
                    <fullName>Choice/Choice Plus</fullName>
                </value>
                <value>
                    <fullName>CIP/XL Health</fullName>
                </value>
                <value>
                    <fullName>Compass</fullName>
                </value>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>CRS</fullName>
                </value>
                <value>
                    <fullName>DSNP</fullName>
                </value>
                <value>
                    <fullName>Dual Medicaid and Medicare</fullName>
                </value>
                <value>
                    <fullName>Empire</fullName>
                </value>
                <value>
                    <fullName>Golden Rule</fullName>
                </value>
                <value>
                    <fullName>HARF</fullName>
                </value>
                <value>
                    <fullName>Harvard Pilgrim</fullName>
                </value>
                <value>
                    <fullName>HCBS</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>LTC</fullName>
                </value>
                <value>
                    <fullName>MAHP</fullName>
                </value>
                <value>
                    <fullName>Medica</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>Medicare NPPO</fullName>
                </value>
                <value>
                    <fullName>Navigate</fullName>
                </value>
                <value>
                    <fullName>NHP</fullName>
                </value>
                <value>
                    <fullName>Oxford</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>Railroad</fullName>
                </value>
                <value>
                    <fullName>River Valley</fullName>
                </value>
                <value>
                    <fullName>Select/Select Plus</fullName>
                </value>
                <value>
                    <fullName>Sierra Health</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Comments__c</fullName>
        <description>Comments sent in from the provider</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <description>Internal number used for documentation on a call, claim adjustment, or external contact</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Original reference number from the first level service model failure</inlineHelpText>
        <label>Reference Number</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>5 areas UHC Networks has broken the country into</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reimbursement_Expected__c</fullName>
        <description>The amount of money a provider thinks they should get paid on a claim</description>
        <label>Reimbursement Expected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Resolution_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resolution Partner</label>
        <referenceTo>PIR_Resolution_Partner__c</referenceTo>
        <relationshipLabel>Case Items</relationshipLabel>
        <relationshipName>Case_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResolvedBy__c</fullName>
        <formula>IF( Resolved__c , LastModifiedBy.FirstName &amp; &apos; &apos; &amp; LastModifiedBy.LastName, null )</formula>
        <label>Resolved By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResolvedDate__c</fullName>
        <formula>IF( Resolved__c , (LastModifiedDate) , null )</formula>
        <label>Resolved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Resolved_Reason__c</fullName>
        <label>Resolved Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Resolved__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Adjustment Not Needed</fullName>
                </value>
                <value>
                    <fullName>Inappropriate Route</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolved_date__c</fullName>
        <description>The date the Case Item or claim is completed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PIR Resolved date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Unresolved</fullName>
                    <default>true</default>
                    <label>Unresolved</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Monitor</fullName>
                </value>
                <value>
                    <fullName>Pending Provider Information</fullName>
                </value>
                <value>
                    <fullName>Reopen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tax ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Billed_Charges__c</fullName>
        <description>Total dollars billed on a single claim</description>
        <label>Total Billed Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UHC_Payment_Received__c</fullName>
        <description>The amount of money that UHC has paid a provider at the time a provider asks for additional reimbursement</description>
        <label>UHC Payment Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Webservice_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Webservice Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webservice_Parameters__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Webservice Parameters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Item</label>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Case Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Items</pluralLabel>
    <recordTypes>
        <fullName>PIR_Case_Items</fullName>
        <active>true</active>
        <description>Record type is created for Reactive and Proactive</description>
        <label>PIR Case Items</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Claim_Outcome_Req_For_Resolved_Case_Item</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;PIR_Case_Items&apos;,
ISPICKVAL( Status__c ,&apos;Resolved&apos;),
ISPICKVAL(Claim_Outcome_Status__c,&apos;&apos;)
)</errorConditionFormula>
        <errorDisplayField>Claim_Outcome_Status__c</errorDisplayField>
        <errorMessage>Claim Outcome Status required for Resolved case items.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Monitor_Date_Req_For_Monitor_Case_Item</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;PIR_Case_Items&apos;,
ISPICKVAL( Status__c ,&apos;Monitor&apos;),
ISBLANK(Monitor_Only_Date__c)
)</errorConditionFormula>
        <errorDisplayField>Monitor_Only_Date__c</errorDisplayField>
        <errorMessage>Monitor Only Date required for Monitor case items.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Remove_the_Resolved_Reason_Permission</fullName>
        <active>true</active>
        <description>When case status is closed, not allow unresolved case items</description>
        <errorConditionFormula>AND(ISPICKVAL(Case__r.Status,&apos;Closed&apos;), Resolved__c  = true,ISCHANGED(Resolved_Reason__c))</errorConditionFormula>
        <errorMessage>All case items must be resolved on a closed case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ResolveCaseItem</fullName>
        <active>false</active>
        <description>When Resolved Reason is Populated , Resolved checkbox must be checked</description>
        <errorConditionFormula>AND( Resolved__c, 
ISPICKVAL(Resolved_Reason__c, &apos;&apos;) )</errorConditionFormula>
        <errorDisplayField>Resolved_Reason__c</errorDisplayField>
        <errorMessage>You must enter a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Case_Mapping_change</fullName>
        <active>true</active>
        <description>Restrict the Case mapping for non Integration and non System Admin User</description>
        <errorConditionFormula>AND(
 AND($Profile.Name !=&apos;System Administrator&apos;,
$Profile.Name !=&apos;Integration&apos;,
$Profile.Name !=&apos;Integration Only&apos;
),
 ISCHANGED(Case__c ) 
)</errorConditionFormula>
        <errorDisplayField>Case__c</errorDisplayField>
        <errorMessage>Only Integration and System Admin users able to re-parenting the case</errorMessage>
    </validationRules>
</CustomObject>